applications/openeuler-website-backup/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # NOTE: fake-letsencrypt-issuer is definitely not here, we overwrite the default value in order to not generate certs automatically.
    cert-manager.io/cluster-issuer: fake-letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: website-v2-ingress-backend
spec:
  tls:
    - hosts:
        - backup.openeuler.org
      secretName: website-tls
  rules:
    - host: backup.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
