applications/openeuler-website-backup/ingress-main.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # TODO: mark this annotation is not working, we need figure how to handle this in the future.
    # cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
  name: website-v2-ingress-main

spec:
  tls:
    - hosts:
        - backup.openeuler.org
      secretName: website-tls
  rules:
    - host: backup.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
