applications/openeuler-website-backup/www-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/permanent-redirect: https://openeuler.org
  name: openeuler-backup-www-website-ingress
spec:
  tls:
    - hosts:
        - www.backup.openeuler.org
      secretName: openeuler-backup-www-website-tls
  rules:
    - host: www.backup.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
